code/human_written_tests/WebAssembly/processed_control_flow_validation/test_if_14.wast
(assert_invalid
  (module (func $type-empty-i64 (result i64) (if (i32.const 0) (then))))
  "type mismatch"
)